# reversi

./: Cargo.toml
src/: board.rs  coordinates.rs  game.rs  lib.rs  piece.rs  position.rs  walker.rs
