[package]
edition = "2021"
name = "reversi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
arrayvec = "0.7.2"
clearscreen = "2.0.0"
colored = "2.0.0"
enum-iterator = "1.3.0"
log = "0.4.17"
rand = "0.8.5"
regex = "1.7.1"
termion = "2.0.1"
thiserror = "1.0.38"

[dev-dependencies]
rstest = "0.16.0"
